added pet picture

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <div id="play" class="quad"></div>
     <div id="fight" class="quad"></div>
     <div id="sleep" class="quad"></div>
-    <div id="pet"></div>
+    <div id="pet" class="pet"></div>
   </div>
 </body>
 </html>
