added death function

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id="app">
-    <div id="progress" class="progress"></div>
+    <div id="progress"></div>
     <div id="eat" class="quad"></div>
     <div id="play" class="quad"></div>
     <div id="fight" class="quad"></div>
